<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sfondo1"
    tools:context="com.raffide.nfridgec.UI.MainClass" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
    </LinearLayout>

    <EditText
        android:id="@+id/idUsername"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:drawableBottom="@color/black"
        android:background="@color/noback"
        android:drawableTint="@color/black">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login"
        style="@style/button_text"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idUsername"
        android:layout_alignRight="@+id/password"
        android:layout_centerVertical="true"
        android:background="@drawable/grey_button"
        android:text="@string/login"
        android:textSize="@dimen/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_alignLeft="@+id/idUsername"
        android:layout_below="@+id/idUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableBottom="@color/black"
        android:background="@android:color/transparent"
        android:layout_height="@dimen/login" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>